# ESN-AGandDEwLL-RatoVirtual

./: CMakeLists.txt  main.cpp
12Neuronios/Beta05/AG/: actions_0.txt  actions_1.txt  actions_11.txt  actions_12.txt  actions_13.txt  actions_14.txt  actions_15.txt  actions_16.txt  actions_17.txt  actions_18.txt  actions_19.txt  actions_2.txt  actions_20.txt  actions_21.txt  actions_22.txt  actions_23.txt  actions_24.txt  actions_25.txt  actions_26.txt  actions_27.txt  actions_28.txt  actions_29.txt  actions_3.txt  actions_4.txt  actions_5.txt  actions_6.txt  actions_7.txt  actions_8.txt  actions_9.txt  activations_steps_0.txt  activations_steps_1.txt  activations_steps_10.txt  activations_steps_11.txt  activations_steps_12.txt  activations_steps_13.txt  activations_steps_14.txt  activations_steps_15.txt  activations_steps_16.txt  activations_steps_17.txt  activations_steps_18.txt  (+79 more)
12Neuronios/Beta05/DECC2/: actions_0.txt  actions_1.txt  actions_10.txt  actions_11.txt  actions_12.txt  actions_13.txt  actions_14.txt  actions_16.txt  actions_17.txt  actions_18.txt  actions_19.txt  actions_2.txt  actions_20.txt  actions_21.txt  actions_22.txt  actions_23.txt  actions_25.txt  actions_26.txt  actions_28.txt  actions_29.txt  actions_3.txt  actions_5.txt  actions_6.txt  actions_7.txt  actions_8.txt  actions_9.txt  activations_steps_0.txt  (+84 more)
src/core/: ESN.cpp  ESN.h  Graph.cpp  Graph.h  Random.cpp  Random.h  Simulador.cpp  Simulador.h  estVIG2.cpp  estVIG2.h  nr_ran.cpp  nr_ran.h
src/parameters/: Parameters.cpp  Parameters.h
src/utils/: saveFiles.cpp  utils_functions.cpp
(+11121 files in other folders)
